# python_package_template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
docs/: _config.yml  _toc.yml  conf.py
src/package_name/: __init__.py
